@@ -1,0 +1,35 @@
+# rpm tags vary according rpm versions
+# some are added, some are removed
+# this is a list of optional tags
+# this tags will be used if available,
+# else ignored
+DISTTAG d_line
+ENHANCEFLAGS d_line
+ENHANCENAME d_line
+ENHANCESFLAGS d_line
+ENHANCESNAME d_line
+ENHANCESVERSION d_line
+ENHANCEVERSION d_line
+# not in old distribs
+FILECAPS d_word
+# only in rpm 5
+FILENAMES replacedby FILEPATH
+POSTTRANS d_line
+POSTTRANSPROG d_line
+PRETRANS d_line
+PRETRANSPROG d_line
+RECOMMENDFLAGS d_line
+RECOMMENDNAME d_line
+RECOMMENDVERSION d_line
+SUGGESTFLAGS d_line
+SUGGESTNAME d_line
+SUGGESTSFLAGS d_line
+SUGGESTSNAME d_line
+SUGGESTSVERSION d_line
+SUGGESTVERSION d_line
+SUPPLEMENTFLAGS d_line
+SUPPLEMENTNAME d_line
+SUPPLEMENTVERSION d_line
+# only in rpm 5
+TRIGGERCONDS d_word
+TRIGGERTYPE d_word
